welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:21: error: not found: value Color
setCouleurBrosse(Color.RED)
                 ^SnakeBuggle:31: error: Unit does not take parameters
		gauche()() ; avance();gauche()
                        ^