welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
def fonctionTest() : Boolean =  {
	var rep = false
	if (estFaceMur) {
		if (getDirection() == Direction.EST) {
		droite() ; 
		if (estFaceMur) {
			gauche() ; rep = true; 
		}
	}
	if (getDirection() == Direction.OUEST) { 
		gauche();
		if (estFaceMur) {
			droite() ; rep = true; 
		}
	}
	}
	return rep
}
setCouleurBrosse(Color.RED)
baisseBrosse()
while (!fonctionTest()) {
	if (!estFaceMur()) { 
		avance()
	} 
	if (getDirection() == Direction.EST) {
		droite() ; avance();droite()
	}
	if (getDirection() == Direction.EST) {
		gauche()() ; avance();gauche()
	}
		
}
leveBrosse()
}
